<resources>
    <string name="app_name">茶明白</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">茶明白</string>
    <string name="nav_header_subtitle">走进茶的世界</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

    <string name="menu_home">主页</string>
    <string name="menu_search">搜索</string>
    <string name="menu_favorite">我的收藏</string>
    <string name="menu_version">版本信息</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_history">浏览历史</string>

    <string name="title_headlines">头条</string>
    <string name="title_knowledge">知道</string>
    <string name="title_consulting">咨询</string>
    <string name="title_business">经营</string>
    <string name="title_chart">数据</string>

    <string name="goods_name">标题</string>
    <string name="goods_year">年份</string>
    <string name="goods_desc">详细信息</string>
    <string name="button_goods_share_desc">分享按钮</string>
    <string name="button_goods_favorite_desc">收藏按钮</string>
    <string name="item_title">标题</string>
    <string name="item_subtitle">副标题</string>
    <string name="button_goods_read_desc">阅读按钮</string>
    <string name="button_search">搜索</string>
    <string name="edit_text_keyword_hint">请输入搜索关键字</string>
    <string name="button_feedback_text">我要反馈</string>
    <string name="edit_text_feedback_hint">请在此处输入要反馈的内容</string>
    <string name="dlg_news_title">标题</string>
    <string name="dlg_news_date">日期</string>
    <string name="dlg_news_content">内容</string>
</resources>