<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_headlines">

<!--    <fragment-->
<!--        android:id="@+id/nav_home"-->
<!--        android:name="com.example.teaknowledge.ui.home.HomeFragment"-->
<!--        android:label="@string/menu_home"-->
<!--        tools:layout="@layout/fragment_home" />-->

    <fragment
        android:id="@+id/navigation_headlines"
        android:name="com.example.teaknowledge.ui.headlines.HeadlinesFragment"
        android:label="@string/title_headlines"
        tools:layout="@layout/fragment_headlines" />

    <fragment
        android:id="@+id/navigation_knowledge"
        android:name="com.example.teaknowledge.ui.knowledge.KnowledgeFragment"
        android:label="@string/title_knowledge"
        tools:layout="@layout/fragment_knowledge" />

    <fragment
        android:id="@+id/navigation_consulting"
        android:name="com.example.teaknowledge.ui.consulting.ConsultingFragment"
        android:label="@string/title_consulting"
        tools:layout="@layout/fragment_consulting" />

    <fragment
        android:id="@+id/navigation_business"
        android:name="com.example.teaknowledge.ui.business.BusinessFragment"
        android:label="@string/title_business"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.example.teaknowledge.ui.chart.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.teaknowledge.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.teaknowledge.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_version"
        android:name="com.example.teaknowledge.ui.version.VersionFragment"
        android:label="@string/menu_version"
        tools:layout="@layout/fragment_version" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.teaknowledge.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.teaknowledge.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
</navigation>